feat(contact): add ContactStore with server error handling and stricter email validation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -340,7 +340,8 @@
     "messages": {
       "success": "Message sent! Thanks for reaching out.",
       "error": "Failed to send message. Please try again.",
-      "cooldown": "Please wait {{ seconds }}s"
+      "cooldown": "Please wait {{ seconds }}s",
+      "validationErrors": "Server validation errors"
     }
   },
   "profile": {
