feat(blog): next and prev article buttons

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -142,7 +142,9 @@
       "notFound": "Article not found",
       "notFoundButton": "Return to Blog",
       "notFoundAriaLabel": "Return to blog list",
-      "loading": "Loading article..."
+      "loading": "Loading article...",
+      "previousArticle": "Previous Article",
+      "nextArticle": "Next Article"
     }
   },
   "modules": {
