feat(dashboard): expand test stats, fix contributor count

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,7 +72,11 @@
     "projectHealth": {
       "title": "Project Health",
       "testCoverage": "Test Coverage",
-      "perf": "Perf",
+      "statements": "Statements",
+      "branches": "Branches",
+      "functions": "Functions",
+      "lines": "Lines",
+      "perf": "Performance",
       "a11y": "A11y",
       "best": "Best",
       "seo": "SEO"
