refactor(dashboard): test cov card uses donut

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -78,6 +78,7 @@
     "projectHealth": {
       "title": "Salud del Proyecto",
       "testCoverage": "Cobertura de Pruebas",
+      "average": "Promedio",
       "statements": "Declaraciones",
       "branches": "Ramas",
       "functions": "Funciones",
