--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,6 +72,7 @@
     "projectHealth": {
       "title": "Project Health",
       "testCoverage": "Test Coverage",
+      "average": "Average",
       "statements": "Statements",
       "branches": "Branches",
       "functions": "Functions",
