refactor(module-details): redesign to be more similar to blog/adr details

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -202,13 +202,13 @@
       "features": "Key Features",
       "techStack": "Technology Stack",
       "tags": "Tags",
-      "launchDemo": "Launch Demo",
       "viewSource": "View Source",
-      "noDemo": "Demo not available",
       "noSource": "Source not available",
       "statusLabel": "Status: {{ status }}",
       "categoryLabel": "Category: {{ category }}",
-      "technologyLabel": "Technology: {{ technology }}"
+      "technologyLabel": "Technology: {{ technology }}",
+      "previousModule": "Previous",
+      "nextModule": "Next"
     },
     "data": {
       "design-system": {
