feat(dashboard): add last deployed date

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -67,6 +67,7 @@
       "operationalStatus": "Operational Status",
       "buildStatus": "Build Status",
       "deployStatus": "Deploy Status",
+      "lastDeployed": "Last Deployed",
       "loading": "Loading system metrics..."
     },
     "projectHealth": {
