--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -73,6 +73,7 @@
       "operationalStatus": "Estado Operacional",
       "buildStatus": "Estado de Compilación",
       "deployStatus": "Estado de Despliegue",
+      "lastDeployed": "Último Despliegue",
       "loading": "Cargando métricas del sistema..."
     },
     "projectHealth": {
