fix(i18n): add missing spanish translations for dashboard metrics

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -99,6 +99,28 @@
         "error": "Sobre Presupuesto"
       }
     },
+    "documentation": {
+      "title": "Documentación",
+      "components": "Componentes",
+      "services": "Servicios"
+    },
+    "linting": {
+      "title": "Calidad de Código",
+      "errors": "Errores",
+      "warnings": "Advertencias"
+    },
+    "dependencies": {
+      "title": "Dependencias",
+      "total": "Paquetes Totales",
+      "outdated": "Desactualizados",
+      "vulnerabilities": "Vulnerabilidades"
+    },
+    "git": {
+      "title": "Repositorio",
+      "commits": "Commits Totales",
+      "contributors": "Colaboradores",
+      "branches": "Ramas"
+    },
     "visitors": {
       "title": "Visitantes en Tiempo Real",
       "live": "En Vivo",
