feat(dashboard): add coverage report link and deployment config

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -81,7 +81,8 @@
       "perf": "Performance",
       "a11y": "A11y",
       "best": "Best",
-      "seo": "SEO"
+      "seo": "SEO",
+      "viewCoverage": "View Report"
     },
     "documentation": {
       "title": "Documentation",
