feat(dashboard): link code quality card to eslint config

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -93,7 +93,8 @@
     "linting": {
       "title": "Code Quality",
       "errors": "Errors",
-      "warnings": "Warnings"
+      "warnings": "Warnings",
+      "viewConfig": "View Config"
     },
     "dependencies": {
       "title": "Dependencies",
