--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -109,7 +109,8 @@
     "linting": {
       "title": "Calidad de Código",
       "errors": "Errores",
-      "warnings": "Advertencias"
+      "warnings": "Advertencias",
+      "viewConfig": "Ver Config"
     },
     "dependencies": {
       "title": "Dependencias",
