feat(dashboard): link documentation card to storybook and fix path resolution

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -104,7 +104,8 @@
     "documentation": {
       "title": "Documentación",
       "components": "Componentes",
-      "services": "Servicios"
+      "services": "Servicios",
+      "viewStorybook": "Ver Storybook"
     },
     "linting": {
       "title": "Calidad de Código",
