--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -88,7 +88,8 @@
     "documentation": {
       "title": "Documentation",
       "components": "Components",
-      "services": "Services"
+      "services": "Services",
+      "viewStorybook": "View Storybook"
     },
     "linting": {
       "title": "Code Quality",
