feat(dashboard): add view repository button to git card

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -117,7 +117,8 @@
       "title": "Repository",
       "commits": "Total Commits",
       "contributors": "Contributors",
-      "branches": "Branches"
+      "branches": "Branches",
+      "viewRepository": "View Repository"
     },
     "theme": {
       "title": "Active Theme",
