--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -123,7 +123,8 @@
       "title": "Repositorio",
       "commits": "Commits Totales",
       "contributors": "Colaboradores",
-      "branches": "Ramas"
+      "branches": "Ramas",
+      "viewRepository": "Ver Repositorio"
     },
     "visitors": {
       "title": "Visitantes en Tiempo Real",
