feat(dashboard): integrate bundle analyzer report

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -111,7 +111,8 @@
         "pass": "✓ In Budget",
         "warn": "Warning",
         "error": "Over Budget"
-      }
+      },
+      "viewMap": "View Analyzer Map"
     },
     "git": {
       "title": "Repository",
