--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -99,7 +99,8 @@
         "pass": "✓ En Presupuesto",
         "warn": "Advertencia",
         "error": "Sobre Presupuesto"
-      }
+      },
+      "viewMap": "Ver Mapa de Análisis"
     },
     "documentation": {
       "title": "Documentación",
