feat(dashboard): integrate code duplication tracking

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -95,6 +95,7 @@
       "title": "Code Quality",
       "errors": "Errors",
       "warnings": "Warnings",
+      "duplication": "Duplication",
       "viewConfig": "View Config"
     },
     "dependencies": {
