--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -112,6 +112,7 @@
       "title": "Calidad de Código",
       "errors": "Errores",
       "warnings": "Advertencias",
+      "duplication": "Duplicación",
       "viewConfig": "Ver Config"
     },
     "dependencies": {
