feat(dashboard): add directives to documentation card

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -106,6 +106,7 @@
       "title": "Documentación",
       "components": "Componentes",
       "services": "Servicios",
+      "directives": "Directivas",
       "viewStorybook": "Ver Storybook"
     },
     "linting": {
