--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,6 +89,7 @@
       "title": "Documentation",
       "components": "Components",
       "services": "Services",
+      "directives": "Directives",
       "viewStorybook": "View Storybook"
     },
     "linting": {
