feat(dashboard): generalize directives to utils metric

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,7 +89,7 @@
       "title": "Documentation",
       "components": "Components",
       "services": "Services",
-      "directives": "Directives",
+      "utils": "Utils",
       "viewStorybook": "View Storybook"
     },
     "linting": {
