--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -95,6 +95,7 @@
       "title": "Tamaño del Bundle",
       "budget": "Presupuesto",
       "initial": "JS/CSS Inicial",
+      "lazyChunks": "Fragmentos Diferidos",
       "status": {
         "pass": "✓ En Presupuesto",
         "warn": "Advertencia",
