fix(dashboard): change branches to merged prs

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -122,7 +122,7 @@
       "title": "Repository",
       "commits": "Total Commits",
       "contributors": "Contributors",
-      "branches": "Branches",
+      "prs": "Merged PRs",
       "viewRepository": "View Repository"
     },
     "theme": {
